# advent-2025

./: .clangd  .gitignore  Cargo.toml  master.rec
day1/: day.odin  day1.c  day1.rs  input.txt.age
day2/: day2.c  day2.rs  input.txt.age
day3/: day3.rs
day4/: day4.c  day4.odin  day4.rs  input.txt.age
day5/: day5.c  day5.rs  input.txt.age
day6/: day6-part2.c  day6.c  day6.rs  input.txt.age
day7/: day7.odin  input.txt.age
day9/: day9.rs  input.txt.age
utils/: da.h  debug.h  defer.h  file.h  lib.rs  log.h  numbers.h  perf_measure.h  threadpool.h
