[package]
name = "advent2025"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day1"
path = "day1/day1.rs"

[[bin]]
name = "day2"
path = "day2/day2.rs"

[[bin]]
name = "day3"
path = "day3/day3.rs"

[[bin]]
name = "day4"
path = "day4/day4.rs"

[[bin]]
name = "day5"
path = "day5/day5.rs"

[lib]
path = "utils/lib.rs"

[dependencies]
rayon = "1.11.0"
